compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__externals__javascript_targeted_function_cant_contain_erlang_only_function.snap
---
source: compiler-core/src_refactored/__core/type_/tests/externals.rs
assertion_line: 157
expression: "@target(javascript)\npub fn javascript_only() -> Int {\n  erlang_only()\n}\n\n@external(erlang, \"one\", \"two\")\nfn erlang_only() -> Int\n    "
snapshot_kind: text
---
----- SOURCE CODE
@target(javascript)
pub fn javascript_only() -> Int {
  erlang_only()
}

@external(erlang, "one", "two")
fn erlang_only() -> Int
    

----- ERROR
error: Unsupported target
  ┌─ /src/one/two.gleam:3:3
  │
3 │   erlang_only()
  │   ^^^^^^^^^^^

This value is not available as it is defined using externals, and there is
no implementation for the JavaScript target.

Hint: Did you mean to build for a different target?
